ring-checkbox__label_i align fix
Former-commit-id: 6a6be2d63b0ce54adb7069ad3f4416cec4908509

--- a/blocks/form/_form.scss
+++ b/blocks/form/_form.scss
@@ -478,6 +478,10 @@
   content: '\e005' ring-font-icon_search;
 }
 
+.ring-checkbox__label_i {
+  vertical-align: middle;
+}
+
 // Checkbox
 //
 // Markup:
